<resources>
    <string name="app_name">Movlix</string>

    <!--  Bottom Navigation  -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>

    <!--  Text View  -->
    <string name="popular_movie">Popular Movie</string>
    <string name="popular_tv_show">Popular Tv Show</string>
    <string name="favorite_popular_movie">Favorite Popular Movie</string>
    <string name="favorite_popular_tv_show">Favorite Popular Tv Show</string>
    <string name="favorite_search_movie">Favorite Search Movie</string>
    <string name="favorite_search_tv_show">Favorite Search Tv Show</string>
    <string name="error">ERROR</string>
    <string name="title">Title</string>
    <string name="overview">A young girl\'s love for a tiny puppy named Clifford makes the dog grow to an enormous size.</string>
    <string name="release_date_example">2021–1–1</string>
    <string name="rating_example">8.5</string>
    <string name="release_date">Release Year</string>
    <string name="rating">Rating</string>

    <string-array name="option">
        <item>Movie</item>
        <item>Tv Show</item>
    </string-array>


    <!--  Content Description  -->
    <string name="poster">Poster</string>
    <string name="backdrop">Backdrop</string>
    <string name="close_button">Close Button</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="title_favorite">Favorite</string>


</resources>