<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <ImageView
        android:id="@+id/detail_backdrop"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:contentDescription="@string/backdrop"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:src="@drawable/backdrop_light"
        app:layout_constraintTop_toTopOf="@id/detail_backdrop"
        app:layout_constraintBottom_toBottomOf="@id/detail_backdrop"
        app:layout_constraintStart_toStartOf="@id/detail_backdrop"
        app:layout_constraintEnd_toEndOf="@id/detail_backdrop"
        android:contentDescription="@string/backdrop"/>

    <ImageButton
        android:id="@+id/detail_close_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/close_button" />

    <ImageButton
        android:id="@+id/detail_fav_btn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_favorite_border"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/detail_close_btn"
        app:layout_constraintBottom_toBottomOf="@id/detail_close_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/favorite_button" />

    <ImageView
        android:id="@+id/detail_poster"
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:layout_marginTop="86dp"
        android:scaleType="centerCrop"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/poster" />

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_poster"/>

    <TextView
        android:id="@+id/detail_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:padding="16dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_title"/>

    <TextView
        android:id="@+id/detail_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/release_date"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_overview" />

    <TextView
        android:id="@+id/detail_item_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/release_date_example"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/detail_release_date"
        app:layout_constraintStart_toEndOf="@id/detail_release_date"/>

    <TextView
        android:id="@+id/detail_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/rating"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_release_date" />

    <TextView
        android:id="@+id/detail_item_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_example"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/detail_rating"
        app:layout_constraintStart_toStartOf="@id/detail_item_release_date"/>

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:id="@+id/detail_pb"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:indeterminateDrawable="@drawable/loading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/detail_backdrop"
        app:layout_constraintBottom_toBottomOf="@id/detail_poster"/>



</androidx.constraintlayout.widget.ConstraintLayout>